--- a/scss/layout/MediaQueries/_media320p.scss
+++ b/scss/layout/MediaQueries/_media320p.scss
@@ -17,4 +17,14 @@
     .titulo {
         margin: 20px;
     }
+    /*Morrocoy*/
+    .gridContainerMorrocoy{
+        margin: 0 20px 0 20px;
+    }
+    /*Pico Bolivar*/
+    .nube{
+        width: 100px;
+        height: 50px;
+        margin: 10%;
+    }
 }
