--- a/scss/layout/MediaQueries/_media768p.scss
+++ b/scss/layout/MediaQueries/_media768p.scss
@@ -2,6 +2,16 @@
     header{
         height: 768px;
     }
+    .navbar[data-bs-theme="dark"]{
+        background-color: #3b3a3a6b;
+    }
+    .navbar[data-bs-theme="light"]{
+        background-color: #dadada7c;
+    }
+    .Logo {
+        padding-right: 0;
+        width: 60px;
+    }
     .introText {
         margin-left: 50px;
         margin-right: 50px;
@@ -12,9 +22,29 @@
         justify-content: flex-end;
         margin-left: 30px;
     }
+
+    .descubre {
+        font-family: "Arizonia", cursive;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 60px;
+        padding-bottom: 0;
+    }
+    .mainTitle {
+        font-family: "Asul", serif;
+        font-weight: 700;
+        font-style: normal;
+        font-size: 65px;
+        padding-top: 0;
+        margin-left: 0;
+    }
+    .introText{
+        font-size: 18px;
+    }
     .imagenCentrada{
         width: 684px;
     }
+    /*index*/
     .gridContainer {
         display: flex;
         flex-direction: column;
@@ -50,18 +80,21 @@
             }
         }
     }
+    /*Canaima*/
     .gridContainerCanaima {
         display: flex;
         flex-direction: column;
-        margin: 0 30px 0 30px;
+        margin: 0 50px 0 50px;
         gap: 30px;
     }
+    /*Morrocoy*/
     .gridContainerMorrocoy {
         display: flex;
         flex-direction: column;
         margin: 0 30px 0 30px;
         gap: 30px;
     }
+    /*Los Roques*/
     .gridContainerRoques {
         display: flex;
         flex-direction: column;
@@ -74,54 +107,40 @@
         justify-content: flex-end;
         img{
             width: 120px;
+            display: none;
         }
-    }
-    .Logo {
-        padding-right: 0;
-        width: 60px;
-    }
-    .descubre {
-        font-family: "Arizonia", cursive;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 60px;
-        padding-bottom: 0;
-    }
-    .mainTitle {
-        font-family: "Asul", serif;
-        font-weight: 700;
-        font-style: normal;
-        font-size: 65px;
-        padding-top: 0;
-        margin-left: 0;
     }
     .tituloRoques{
         margin-right: 15px;
         height: 80vh;
     }
-    .imgArticuleRight {
-        display: flex;
-        align-items: center;
-        width: 680px;
-        object-fit: contain;
-    }
     iframe {
         height: 456px;
         border-radius: 10px;
     }
+    /*Pico Bolivar*/
     .pMerida1{
         flex-direction: column;
         align-items: center;
         gap: 30px;
+        margin-left: 50px;
+        margin-right: 50px;
+        .imgTeleferico{
+            width: 100%;
+        }
+        .imgBusto{
+            width: 100%;
+        }
     }
-    .introText{
-        font-size: 18px;
+    section {
+        .pMerida2{
+            margin-right: 50px;
+            margin-left: 50px;
+        }
     }
     .footerStyle{
         padding-top: 60px;
         margin-top: 50px;
     }
-    .nav-link{
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.308);
-    }
+
 }
